--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -28,7 +28,7 @@
     <ion-grid>
       <ion-row>
         <ion-col col-12 col-sm-10 col-md-8 col-lg-6 col-xl-5 class="center-col">
-          <page-endereco (selectEndereco)="selectEndereco($event)"></page-endereco>
+          <endereco (selectEndereco)="selectEndereco($event)"></endereco>
         </ion-col>
       </ion-row>
     </ion-grid>
