--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -20,6 +20,7 @@
 
 </ion-header>
 <ion-content scroll="false">
+  <input-photo></input-photo>
   <div class="splash-info">
     <div class="splash-logo"></div>
     <div class="splash-intro">
