--- a/src/pages/distribuidor/distribuidor-lista/distribuidor-lista.html
+++ b/src/pages/distribuidor/distribuidor-lista/distribuidor-lista.html
@@ -38,5 +38,5 @@
   </div>
 </ion-content>
 <ion-footer color="customColor1">
-  <button ion-button block (click)="signup()" color="customColor1">{{ 'SIGNUP_DISTRIBUTOR' | translate }}</button>
+  <button ion-button block (click)="signupDistribuidora()" color="customColor1">{{ 'SIGNUP_DISTRIBUTOR' | translate }}</button>
 </ion-footer>
