--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -20,7 +20,6 @@
 
 </ion-header>
 <ion-content scroll="false">
-  <input-photo></input-photo>
   <div class="splash-info">
     <div class="splash-logo"></div>
     <div class="splash-intro">
@@ -36,5 +35,5 @@
   </div>
 </ion-content>
 <ion-footer color="customColor1">
-  <button ion-button block (click)="signup()" color="customColor1">{{ 'SIGNUP_DISTRIBUTOR' | translate }}</button>
+  <button ion-button block (click)="signupDistribuidora()" color="customColor1">{{ 'SIGNUP_DISTRIBUTOR' | translate }}</button>
 </ion-footer>
