--- a/src/pages/distribuidor/distribuidor-edit/distribuidor-edit.html
+++ b/src/pages/distribuidor/distribuidor-edit/distribuidor-edit.html
@@ -1,26 +1,31 @@
-<ion-header>
-  <ion-navbar color="customColor1">
-    <ion-title>{{ 'DIST_TITLE' | translate }}</ion-title>
-    <ion-buttons end *ngIf="!usuarioSrvc.usuarioAtual">
-      <button ion-button icon-only (click)="signup()">{{ 'SIGNUP' | translate }}</button>
-      <button ion-button icon-only (click)="login()">{{ 'LOGIN' | translate }}</button>
-    </ion-buttons>
-    <ion-buttons  end *ngIf="usuarioSrvc.usuarioAtual">
-      <button ion-button icon-only>{{ usuarioSrvc.usuarioAtual.usr_nome }}</button>
-      <button ion-button icon-only>
-        <img *ngIf="usuarioSrvc.usuarioAtual.usr_fb_foto" class="image-profile" [src]="usuarioSrvc.usuarioAtual.usr_fb_foto.data.url"
-        />
-        <img *ngIf="!usuarioSrvc.usuarioAtual.usr_fb_foto" class="image-profile" src="assets/img/user-placeholder-1.jpg" />
-      </button>
-      <button ion-button icon-only>
-        <ion-icon name="more"></ion-icon>
-      </button>
-    </ion-buttons>
-  </ion-navbar>
-
-</ion-header>
+<ion-header class="content-desktop">
+    
+      <ion-navbar>
+        <ion-title>{{ 'DIST_TITLE' | translate }}</ion-title>
+        <ion-buttons start>
+          <button ion-button (click)="cancel()">
+            <span color="primary" showWhen="ios">
+              {{ 'CANCEL_BUTTON' | translate }}
+            </span>
+            <ion-icon name="md-close" showWhen="android,windows"></ion-icon>
+          </button>
+        </ion-buttons>
+        <ion-buttons end>
+          <button ion-button (click)="done()" [disabled]="!isReadyToSave" strong>
+            <span color="primary" showWhen="ios">
+              {{ 'DONE_BUTTON' | translate }}
+            </span>
+            <ion-icon name="md-checkmark" showWhen="core,android,windows"></ion-icon>
+          </button>
+        </ion-buttons>
+      </ion-navbar>
+    
+    </ion-header>
 <ion-content>
   <div class="content-desktop">
+    <ion-header>
+        <ion-title>Distribuidora</ion-title>        
+    </ion-header>
     <form [formGroup]="formulario" novalidate>
       <ion-list>
         <ion-item>
