--- a/src/pages/distribuidor/distribuidor-lista/distribuidor-lista.html
+++ b/src/pages/distribuidor/distribuidor-lista/distribuidor-lista.html
@@ -1,28 +1,8 @@
-<ion-header>
-  <ion-navbar color="customColor1">
-    <ion-title>{{ 'APP_NAME' | translate }}</ion-title>
-    <ion-buttons end *ngIf="!usuarioSrvc.usuarioAtual">
-      <button ion-button icon-only (click)="signup()">{{ 'SIGNUP' | translate }}</button>
-      <button ion-button icon-only (click)="login()">{{ 'LOGIN' | translate }}</button>
-    </ion-buttons>
-    <ion-buttons (click)="show()" end *ngIf="usuarioSrvc.usuarioAtual">
-      <button ion-button icon-only>{{ usuarioSrvc.usuarioAtual.usr_nome }}</button>
-      <button ion-button icon-only>
-          <img *ngIf="usuarioSrvc.usuarioAtual.usr_fb_foto" class="image-profile" [src]="usuarioSrvc.usuarioAtual.usr_fb_foto.data.url"/>
-          <img *ngIf="!usuarioSrvc.usuarioAtual.usr_fb_foto" class="image-profile" src="assets/img/user-placeholder-1.jpg"/>
-        </button>
-      <button ion-button icon-only>
-          <ion-icon name="more"></ion-icon>
-        </button>
-    </ion-buttons>
-  </ion-navbar>
-
-</ion-header>
-<ion-content>
-  <div class="content-desktop">
+<ion-content class="content-desktop">
+  <div>
     <ion-grid>
       <ion-row>
-        <ion-col col-12 col-md-6 *ngFor='let distribuidor of distribuidorSrvc.distribuidores | async'>
+        <ion-col col-12 col-xl-6 *ngFor='let distribuidor of distribuidorSrvc.distribuidores | async'>
           <ion-item>
             <ion-thumbnail item-start>
               <img *ngIf="!distribuidor.dist_img" src="assets/img/appicon.png">
@@ -37,6 +17,4 @@
     </ion-grid>
   </div>
 </ion-content>
-<ion-footer color="customColor1">
-  <button ion-button block (click)="signupDistribuidora()" color="customColor1">{{ 'SIGNUP_DISTRIBUTOR' | translate }}</button>
-</ion-footer>
+
