--- a/src/pages/distribuidor/distribuidor-lista/distribuidor-lista.html
+++ b/src/pages/distribuidor/distribuidor-lista/distribuidor-lista.html
@@ -1,5 +1,5 @@
 <ion-content class="content-desktop">
-  <div>
+  <div class="content-desktop-inside">
     <ion-grid>
       <ion-row>
         <ion-col col-12 col-xl-6 *ngFor='let distribuidor of distribuidorSrvc.distribuidores | async'>
