--- a/src/pages/painel-controle-adm/painel-controle-adm/funcionalidade/funcionalidade-list/funcionalidade-list.html
+++ b/src/pages/painel-controle-adm/painel-controle-adm/funcionalidade/funcionalidade-list/funcionalidade-list.html
@@ -1,18 +1,40 @@
-<!--
-  Generated template for the FuncionalidadeListPage page.
+<ion-content padding class="content-desktop">
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
+  <h4>{{perfil.per_nome}}</h4>
+  <p>{{perfil.per_descricao}}</p>
 
-  <ion-navbar>
-    <ion-title>funcionalidade-list</ion-title>
-  </ion-navbar>
+  <ion-card>
+    <ion-card-header>
+      <ion-buttons end>
+        <button ion-button outline icon-left (click)=" editPerfil(null)">
+          <ion-icon name="add-circle"></ion-icon>
+          Criar nova Funcionalidade
+        </button>
+      </ion-buttons>
+    </ion-card-header>
 
-</ion-header>
-
-
-<ion-content padding>
+    <ion-list>
+      <ion-item-sliding *ngFor='let funcionalidade of funcionalidadeSrvc.funcionalidades | async'>
+        <ion-item>
+          <h2>{{funcionalidade.fun_nome}}</h2>
+          <p>{{funcionalidade.fun_descricao}}</p>
+        </ion-item>
+        <ion-item-options>
+          <button ion-button color="primary" (click)="editPerfil(perfil)">
+            <ion-icon name="create"></ion-icon>
+            Editar
+          </button>
+          <button ion-button color="danger" (click)="excluirPerfil(perfil.$key)">
+            <ion-icon name="trash"></ion-icon>
+            Excluir
+          </button>
+          <button ion-button color="dark" (click)="configurarPerfil(perfil)">
+            <ion-icon name="settings"></ion-icon>
+            Configurar
+          </button>
+        </ion-item-options>
+      </ion-item-sliding>
+    </ion-list>
+  </ion-card>
 
 </ion-content>
