--- a/src/pages/painel-controle-adm/painel-controle-adm/painel-controle-adm.html
+++ b/src/pages/painel-controle-adm/painel-controle-adm/painel-controle-adm.html
@@ -1,17 +1,16 @@
 <ion-header class="content-desktop">
     
   <ion-navbar>
-    <ion-title>Painel de Controle </ion-title>
+    <ion-title>Painel de Controle Administrativo</ion-title>
   </ion-navbar>
 
 </ion-header>
-
-<ion-content padding>
-
-    <ion-card>
-        <ion-card-header>
-          Funcionalidades
-        </ion-card-header>
-        <perfil-list></perfil-list>
-      </ion-card>
+<ion-content class="tab-desktop">
+    <ion-tabs  color="customColor1" >
+        <ion-tab tabIcon="people"  tabTitle="Perfis" [root]="perfilListPage"></ion-tab>
+        <ion-tab tabIcon="filing"   tabTitle="Solicitações" [root]="perfilListPage" tabBadge="10" tabBadgeStyle="danger"></ion-tab>
+        <ion-tab tabIcon="bookmarks"  tabTitle="Catalogo" [root]="perfilListPage"></ion-tab>
+        <ion-tab tabIcon="star"  tabTitle="Avaliaçoões" [root]="perfilListPage"></ion-tab>
+        <ion-tab tabIcon="water"  tabTitle="Distribuidoras" [root]="perfilListPage" tabBadge="10" tabBadgeStyle="customColor2" ></ion-tab>
+      </ion-tabs>
 </ion-content>
