--- a/src/pages/painel-controle-adm/painel-controle-adm/perfil/perfil-list/perfil-list.html
+++ b/src/pages/painel-controle-adm/painel-controle-adm/perfil/perfil-list/perfil-list.html
@@ -1,18 +1,39 @@
-<!--
-  Generated template for the PerfilListPage page.
+<ion-content padding class="content-desktop">
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
+  <h4>Perfis do sistema</h4>
 
-  <ion-navbar>
-    <ion-title>perfil-list</ion-title>
-  </ion-navbar>
+  <ion-card>
+    <ion-card-header>
+      <ion-buttons end>
+        <button ion-button outline icon-left (click)=" editPerfil(null)">
+          <ion-icon name="add-circle"></ion-icon>
+          Criar novo Perfil
+        </button>
+      </ion-buttons>
+    </ion-card-header>
 
-</ion-header>
-
-
-<ion-content padding>
+    <ion-list>
+      <ion-item-sliding *ngFor='let perfil of perfilAcessoSrvc.perfisAcesso | async'>
+        <ion-item>
+          <h2>{{perfil.per_nome}}</h2>
+          <p>{{perfil.per_descricao}}</p>
+        </ion-item>
+        <ion-item-options>
+          <button ion-button color="primary" (click)="editPerfil(perfil)" >
+            <ion-icon name="create"></ion-icon>
+            Editar
+          </button>
+          <button ion-button color="danger" (click)="excluirPerfil(perfil.$key)" >
+            <ion-icon name="trash"></ion-icon>
+            Excluir
+          </button>
+          <button ion-button color="dark" (click)="configurarPerfil(perfil)">
+            <ion-icon name="settings"></ion-icon>
+            Configurar
+          </button>
+        </ion-item-options>
+      </ion-item-sliding>
+    </ion-list>
+  </ion-card>
 
 </ion-content>
