--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -13,3 +13,8 @@
     </ion-grid>
   </div>
 </ion-content>
+<ion-footer color="customColor1">
+    <ion-toolbar color="customColor1" class="main-footer">
+        <button ion-button block clear class="button-clear" (click)="signupDistribuidora()" color="customColor1">{{ 'SIGNUP_DISTRIBUTOR' | translate }}</button>
+    </ion-toolbar>
+</ion-footer>
