Configuracao do perfil - em andamento

--- a/src/pages/painel-controle-adm/painel-controle-adm/perfis/_painel/perfil-list.html
+++ b/src/pages/painel-controle-adm/painel-controle-adm/perfis/_painel/perfil-list.html
@@ -88,6 +88,7 @@
       <ion-list>
         <ion-item-sliding *ngFor='let menu of menuSrvc.menus | async'>
           <ion-item>
+            <ion-icon name="{{menu.mnu_icone}}" item-start></ion-icon>
             <h2>{{menu.mnu_nome}}</h2>
             <p>{{menu.mnu_descricao}}</p>
           </ion-item>
