Controle de acesso finalizado

--- a/src/pages/painel-controle-adm/painel-controle-adm/perfis/_painel/perfil-list.html
+++ b/src/pages/painel-controle-adm/painel-controle-adm/perfis/_painel/perfil-list.html
@@ -4,7 +4,7 @@
 
     <ion-card>
       <ion-card-header>
-        <ion-buttons end>
+        <ion-buttons end  controle-acesso='teste'>
           <button ion-button outline icon-left (click)=" editPerfil(null)">
             <ion-icon name="add-circle"></ion-icon>
             Criar novo Perfil
