--- a/src/pages/painel-controle-adm/painel-controle-adm/perfis/funcionalidade/funcionalidade-config/funcionalidade-config.html
+++ b/src/pages/painel-controle-adm/painel-controle-adm/perfis/funcionalidade/funcionalidade-config/funcionalidade-config.html
@@ -2,7 +2,7 @@
 <ion-header  class="content-desktop">
 
   <ion-navbar>
-    <ion-title>Configuração da Ação</ion-title>
+    <ion-title>Configuração da Funcionalidade</ion-title>
   </ion-navbar>
 </ion-header>
 
