--- a/src/pages/painel-controle-adm/painel-controle-adm/perfis/perfil/perfil-config/perfil-funcionalidade-config/select-funcionalidade-acao/select-funcionalidade-acao.html
+++ b/src/pages/painel-controle-adm/painel-controle-adm/perfis/perfil/perfil-config/perfil-funcionalidade-config/select-funcionalidade-acao/select-funcionalidade-acao.html
@@ -10,7 +10,7 @@
     <ion-list>
   
       <ion-item *ngFor="let acao of acoes">
-        <ion-label>{{acao.aca_nome}}</ion-label>
+        <ion-label>{{acao.aca_nome}} ({{acao.aca_nome}})</ion-label>
         <ion-checkbox [(ngModel)]="acao._selecionada"></ion-checkbox>
       </ion-item>
   
