--- a/src/pages/painel-controle-adm/painel-controle-adm/perfis/perfil/perfil-config/select-funcionalidade/select-funcionalidade.html
+++ b/src/pages/painel-controle-adm/painel-controle-adm/perfis/perfil/perfil-config/select-funcionalidade/select-funcionalidade.html
@@ -10,7 +10,7 @@
   <ion-list>
 
     <ion-item *ngFor="let funcionalidade of funcionalidades">
-      <ion-label>{{funcionalidade.fun_nome}}</ion-label>
+      <ion-label>{{funcionalidade.fun_nome}} ({{funcionalidade.fun_mnemonico}})</ion-label>
       <ion-checkbox [(ngModel)]="funcionalidade._selecionada"></ion-checkbox>
     </ion-item>
 
