--- a/src/pages/painel-controle-adm/painel-controle-adm/perfis/perfil/perfil-config/perfil-funcionalidade-config/perfil-funcionalidade-config.html
+++ b/src/pages/painel-controle-adm/painel-controle-adm/perfis/perfil/perfil-config/perfil-funcionalidade-config/perfil-funcionalidade-config.html
@@ -8,7 +8,7 @@
   
   
   <ion-content padding  class="content-desktop">
-    <h4>{{perfil.per_nome}} / {{funcionalidade.fun_nome}}</h4>
+    <h4>{{perfil.per_nome}} ({{perfil.per_mnemonico}}) / {{funcionalidade.fun_nome}} ({{funcionalidade.fun_mnemonico}})</h4>
     <p>{{perfil.per_descricao}} / {{funcionalidade.fun_descricao}}</p>
 
         <ion-card>
@@ -24,7 +24,7 @@
           <ion-list>
             <ion-item-sliding *ngFor='let acao of perfilFuncionalidadeAcaoSrvc.acoes'>
               <ion-item>
-                <h2>{{(acao | async)?.aca_nome}}</h2>
+                <h2>{{(acao | async)?.aca_nome}} ({{(acao | async)?.aca_mnemonico}})</h2>
                 <p>{{(acao | async)?.aca_descricao}}</p>
               </ion-item>
               <ion-item-options>
