--- a/src/pages/painel-controle-adm/painel-controle-adm/perfis/perfil/perfil-config/select-menu/select-menu.html
+++ b/src/pages/painel-controle-adm/painel-controle-adm/perfis/perfil/perfil-config/select-menu/select-menu.html
@@ -10,7 +10,7 @@
     <ion-list>
   
       <ion-item *ngFor="let menu of menus">
-        <ion-label>{{menu.mnu_nome}}</ion-label>
+        <ion-label>{{menu.mnu_nome}} ({{menu.mnu_page}})</ion-label>
         <ion-checkbox [(ngModel)]="menu._selecionado"></ion-checkbox>
       </ion-item>
   
