--- a/src/pages/painel-controle-adm/painel-controle-adm/painel-controle-adm.html
+++ b/src/pages/painel-controle-adm/painel-controle-adm/painel-controle-adm.html
@@ -8,7 +8,7 @@
 <ion-content class="tab-desktop">
     <ion-tabs  color="customColor1" >
         <ion-tab tabIcon="settings"  tabTitle="Perfis" [root]="perfilListPage"></ion-tab>
-        <ion-tab tabIcon="people"   tabTitle="Grupos" [root]="emConstrucaoPage" tabBadge="10" tabBadgeStyle="danger"></ion-tab>
+        <ion-tab tabIcon="people"   tabTitle="Grupos" [root]="grupoUsuarioPage" tabBadge="10" tabBadgeStyle="danger"></ion-tab>
         <ion-tab tabIcon="bookmarks"  tabTitle="Catalogo" [root]="emConstrucaoPage"></ion-tab>
         <ion-tab tabIcon="star"  tabTitle="Avaliaçoões" [root]="emConstrucaoPage"></ion-tab>
         <ion-tab tabIcon="water"  tabTitle="Distribuidoras" [root]="emConstrucaoPage" tabBadge="10" tabBadgeStyle="customColor2" ></ion-tab>
